--- a/src/components/SiteInfo/SiteInfo.module.scss
+++ b/src/components/SiteInfo/SiteInfo.module.scss
@@ -3,7 +3,7 @@
 .SiteInfo {
   .wrapper {
     display: flex;
-    margin-top: -70px;
+    margin-top: -80px;
     margin-bottom: 0;
     z-index: 1;
     position: relative;
@@ -13,6 +13,14 @@
       padding: 2rem;
       background-color: $color-background-primary;
       border-radius: 20px 0 0 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: flex-start;
+
+      h3 {
+        font-weight: $font-weight-bold;
+      }
     }
 
     .secondColumn {
@@ -20,6 +28,24 @@
       padding: 2rem;
       background-color: $color-background-lighter;
       border-radius: 0 20px 20px 0;
+      display: flex;
+      flex-direction: column;
+
+      .firstCard {
+        text-align: left;
+      }
+
+      .secondCard {
+        text-align: right;
+      }
     }
+  }
+
+  .banner {
+    margin-top: 100px;
+    background-color: $color-background-primary;
+    padding: 2rem;
+    border-radius: 20px;
+    display: flex;
   }
 }
