add new section Thumbs WIP

--- a/src/components/HeaderHome/HeaderHome.module.scss
+++ b/src/components/HeaderHome/HeaderHome.module.scss
@@ -28,7 +28,7 @@
 
       .titleName {
         font-size: 5rem;
-        font-weight: $font-weight-bold;
+        font-weight: $font-weight-extrabold;
         text-transform: uppercase;
         line-height: 1;
         letter-spacing: 0.5rem;
