--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -38,6 +38,7 @@
 $color-text-dark: #141414;
 $color-text-light: #ffffff;
 $color-text-danger: #ff0000;
+$color-text-primary: #ffbf00;
 
 $color-primary: #ffbf00;
 
