--- a/src/components/SectionTitle/SectionTitle.module.scss
+++ b/src/components/SectionTitle/SectionTitle.module.scss
@@ -2,7 +2,7 @@
 
 .sectionTitle {
   text-align: center;
-  margin-bottom: 4rem;
+  margin-bottom: 100px;
 
   h2 {
     font-size: 2.5rem;
@@ -12,7 +12,16 @@
     margin-bottom: 1rem;
   }
 
+  p {
+    color: $color-text-dark;
+    margin-bottom: 1rem;
+  }
+
   .white {
     color: $color-text-light;
+
+    p {
+      color: $color-text-light;
+    }
   }
 }
