--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -36,7 +36,7 @@
 }
 
 $color-text-dark: #141414;
-$color-text-light: #ffffff;
+$color-text-light: #e7e7e7;
 $color-text-danger: #ff0000;
 $color-text-primary: #ffbf00;
 
@@ -54,4 +54,6 @@ $font-weight-normal: 400;
 $font-weight-bold: 700;
 $font-weight-extrabold: 800;
 $font-weight-black: 900;
+
+$transition_0_3: all 0.3s ease-in-out;
 
