--- a/src/components/Testiniomals/Testiniomals.module.scss
+++ b/src/components/Testiniomals/Testiniomals.module.scss
@@ -19,7 +19,7 @@
     align-items: flex-end;
 
     .testimonial {
-      width: 600px;
+      max-width: 600px;
       margin: 10px 0;
       border-top: 2px solid $color-background-lighter;
 
