--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -14,6 +14,19 @@
 
       .image {
         border-radius: 20px;
+        position: relative;
+
+        &::before {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background-color: $color-primary;
+          opacity: 0.5;
+          border-radius: 20px;
+        }
       }
     }
 
