--- a/src/components/SectionTitle/SectionTitle.module.scss
+++ b/src/components/SectionTitle/SectionTitle.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/settings.scss';
 
-.sectionTitle {
+.section_title {
   text-align: center;
   margin-bottom: 100px;
 
@@ -10,6 +10,10 @@
     color: $color-text-dark;
     text-transform: uppercase;
     margin-bottom: 1rem;
+  }
+
+  .color_primary {
+    color: $color-primary;
   }
 
   p {
