--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,14 +20,7 @@ body {
   min-height: 100vh;
 }
 
-a,
-a:hover,
-a:visited {
-  text-decoration: none;
-  color: inherit;
-}
-
-.colorPrimary {
+.color_primary {
   color: $color-primary !important;
 }
 
