--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/settings.scss';
 
-.AboutMe {
+.about_me {
   padding: 100px 0 300px;
   background-color: $color-background-lighter;
 
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
 
-    .firstColumn {
+    .first_column {
       flex: 50%;
       text-align: center;
 
@@ -30,7 +30,7 @@
       }
     }
 
-    .secondColumn {
+    .second_column {
       flex: 50%;
       display: flex;
       flex-direction: column;
