--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/settings.scss';
 
-.Contact {
+.contact {
+  margin: 200px 0;
   .wrapper {
     display: flex;
     flex-direction: row;
@@ -66,10 +67,10 @@
       .info {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: center;
 
         .info_item {
-          text-align: end;
+          text-align: center;
           margin-bottom: 50px;
 
           svg {
