--- a/src/components/Headers/HeaderHome.module.scss
+++ b/src/components/Headers/HeaderHome.module.scss
@@ -21,19 +21,19 @@
     z-index: 1;
 
     .title {
-      .titlePart {
+      .title_part {
         font-size: 1rem;
         line-height: 7;
       }
 
-      .titleName {
+      .title_name {
         font-size: 5rem;
         font-weight: $font-weight-extrabold;
         text-transform: uppercase;
         line-height: 1;
         letter-spacing: 0.5rem;
 
-        .firstLetter {
+        .first_letter {
           font-size: 130%;
           letter-spacing: 0rem;
         }
@@ -46,7 +46,7 @@
       line-height: 3rem;
       letter-spacing: 0.2rem;
 
-      .textVariable {
+      .text_variable {
         font-weight: $font-weight-bold;
       }
     }
