--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -30,3 +30,11 @@
 .nav-link.active {
   color: #f8b400 !important;
 }
+
+.dropdown-item:active {
+  background-color: unset;
+}
+
+.dropdown-item:hover {
+  background-color: unset;
+}
