--- a/src/components/MyServices/MyServices.module.scss
+++ b/src/components/MyServices/MyServices.module.scss
@@ -55,7 +55,7 @@
       opacity: 0.1;
     }
 
-    .leftSide {
+    .left_side {
       flex: 50%;
 
       h3 {
@@ -74,7 +74,7 @@
       }
     }
 
-    .rightSide {
+    .right_side {
       flex: 50%;
       display: flex;
       justify-content: flex-end;
