--- a/src/components/MyStack/MyStack.module.scss
+++ b/src/components/MyStack/MyStack.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/settings.scss';
 
-.MyStack {
+.my_stack {
   .wrapper {
     background-color: $color-background-dark;
     padding: 100px 40px;
@@ -36,13 +36,13 @@
         &:hover {
           transform: scale(1.07);
 
-          .cardTitle {
+          .card_title {
             color: $color-text-primary;
             transform: scale(1.1);
           }
         }
 
-        .cardTitle {
+        .card_title {
           font-size: 1.5rem;
           font-weight: 700;
           color: $color-text-dark;
