--- a/src/components/SiteInfo/SiteInfo.module.scss
+++ b/src/components/SiteInfo/SiteInfo.module.scss
@@ -1,6 +1,6 @@
 @import '../../styles/settings.scss';
 
-.SiteInfo {
+.site_info {
   .wrapper {
     display: flex;
     margin-top: -80px;
@@ -8,7 +8,7 @@
     z-index: 1;
     position: relative;
 
-    .firstColumn {
+    .first_column {
       flex: 1;
       padding: 2rem;
       background-color: $color-background-primary;
@@ -23,7 +23,7 @@
       }
     }
 
-    .secondColumn {
+    .second_column {
       flex: 1;
       padding: 2rem;
       background-color: $color-background-lighter;
@@ -31,11 +31,11 @@
       display: flex;
       flex-direction: column;
 
-      .firstCard {
+      .first_card {
         text-align: left;
       }
 
-      .secondCard {
+      .second_card {
         text-align: right;
       }
     }
