add few page sites

--- a/src/components/CustomButton/CustomButton.module.scss
+++ b/src/components/CustomButton/CustomButton.module.scss
@@ -27,3 +27,15 @@
     color: $color-text-primary;
   }
 }
+
+.price {
+  font-size: 0.8rem;
+  width: max-content;
+  color: $color-text-dark;
+  border-color: $color-background-dark;
+
+  &:hover {
+    color: $color-text-primary;
+    border-color: $color-background-primary;
+  }
+}
