--- a/src/components/Headers/Headers.module.scss
+++ b/src/components/Headers/Headers.module.scss
@@ -8,7 +8,7 @@
   &::after {
     content: '';
     position: absolute;
-    background-image: url('/images/kropki_512-512.png');
+    background-image: url('/images/kropki_512-512.webp');
     top: 25%;
     left: 20%;
     z-index: 1;
