--- a/src/components/MyStack/MyStack.module.scss
+++ b/src/components/MyStack/MyStack.module.scss
@@ -10,7 +10,7 @@
     &::after {
       content: '';
       position: absolute;
-      background-image: url('/images/kropki_512-512.png');
+      background-image: url('/images/kropki_512-512.webp');
       bottom: 20px;
       right: 20px;
       z-index: 1;
