--- a/src/components/Testiniomals/Testiniomals.module.scss
+++ b/src/components/Testiniomals/Testiniomals.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/settings.scss';
 
 .testiniomals {
-  background-image: url('/images/bg-002-free-img.png');
+  background-image: url('/images/bg-002-free-img.webp');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
