--- a/src/components/CustomButton/CustomButton.module.scss
+++ b/src/components/CustomButton/CustomButton.module.scss
@@ -28,6 +28,16 @@
   }
 }
 
+.white {
+  border: 1px solid $color-background-dark;
+  color: $color-text-dark;
+
+  &:hover {
+    border: 1px solid $color-text-primary;
+    color: $color-text-primary;
+  }
+}
+
 .price {
   font-size: 0.8rem;
   width: max-content;
