--- a/src/components/Menu/MenuMobile.module.scss
+++ b/src/components/Menu/MenuMobile.module.scss
@@ -5,7 +5,7 @@
   border-color: $color-background-lighter;
   color: $color-text-light;
   font-size: 1.2rem;
-  padding: 5px 10px;
+  padding: 1px 10px 5px 10px;
 
   &:hover {
     border-color: $color-primary;
