--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -50,3 +50,23 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .about_me {
+    .wrapper {
+      flex-direction: column;
+
+      .first_column {
+        margin-bottom: 50px;
+        padding: 0 20px;
+        .image {
+          width: 100%;
+        }
+      }
+
+      .second_column {
+        padding: 0 10px;
+      }
+    }
+  }
+}
