--- a/src/components/ArticleList/ArticleList.module.scss
+++ b/src/components/ArticleList/ArticleList.module.scss
@@ -16,3 +16,15 @@
     }
   }
 }
+
+@media (max-width: 992px) {
+  .article_list {
+    .wrapper {
+      flex-direction: column;
+      align-items: center;
+      .card {
+        flex: 100%;
+      }
+    }
+  }
+}
