--- a/src/components/Headers/Headers.module.scss
+++ b/src/components/Headers/Headers.module.scss
@@ -42,3 +42,66 @@
     }
   }
 }
+
+@media (max-width: 1290px) {
+  .header {
+    &::after {
+      top: 25%;
+      left: 15%;
+      height: 250px;
+      width: 250px;
+    }
+  }
+}
+
+@media (max-width: 880px) {
+  .header {
+    &::after {
+      top: 25%;
+      left: 10%;
+    }
+
+    .content {
+      .title {
+        font-size: 3rem;
+        line-height: 4rem;
+      }
+
+      .subtitle {
+        font-size: 1.2rem;
+        line-height: 2.5rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    &::after {
+      top: 25%;
+      left: 10%;
+      width: 200px;
+      height: 200px;
+    }
+  }
+}
+
+@media (max-width: 520px) {
+  .header {
+    &::after {
+      top: 30%;
+      width: 150px;
+      height: 150px;
+    }
+    .content {
+      .title {
+        font-size: 2.5rem;
+      }
+
+      .subtitle {
+        font-size: 1rem;
+        line-height: 2rem;
+      }
+    }
+  }
+}
