--- a/src/components/Prices/Prices.module.scss
+++ b/src/components/Prices/Prices.module.scss
@@ -83,3 +83,18 @@
     }
   }
 }
+
+@media (max-width: 992px) {
+  .prices {
+    .wrapper {
+      .row {
+        flex-direction: column;
+        padding: 0 20px;
+
+        .descryption {
+          margin-right: 0;
+        }
+      }
+    }
+  }
+}
