--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -7,6 +7,17 @@ h4,
 h5,
 h6 {
   margin: 0.5rem;
+}
+
+h1,
+h2 {
   font-family: $font-header;
+}
+
+h3,
+h4,
+h5,
+h6 {
+  font-family: $font-body;
 }
 
