--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -20,6 +20,7 @@ body {
   overflow-y: scroll;
   min-height: 100vh;
   overflow-x: hidden !important;
+  font-family: $font-body;
 }
 
 .color_primary {
