--- a/src/components/MyStack/MyStack.module.scss
+++ b/src/components/MyStack/MyStack.module.scss
@@ -53,3 +53,15 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .my_stack {
+    .wrapper .stack .card {
+      padding: 15px 20px;
+
+      .card_title {
+        font-size: 1.2rem;
+      }
+    }
+  }
+}
