--- a/src/components/Headers/HeaderHome.module.scss
+++ b/src/components/Headers/HeaderHome.module.scss
@@ -3,13 +3,11 @@
 .header {
   background-color: $color-background-dark;
   position: relative;
-
-  .video {
-    height: 90vh;
-    width: 100%;
-    overflow: hidden;
-    object-fit: cover;
-  }
+  height: 90vh;
+  background-image: url('/images/tlo.webp');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
   .content {
     position: absolute;
@@ -17,84 +15,106 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    color: $color-text-light;
     z-index: 1;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    width: max-content;
 
     .title {
-      .title_part {
-        font-size: 1rem;
-        line-height: 7;
+      font-size: 3rem;
+      font-weight: $font-weight-extrabold;
+      text-transform: uppercase;
+      line-height: 1.2;
+      letter-spacing: 0.3rem;
+
+      .title_top {
+        background: linear-gradient(
+          90deg,
+          $color-text-primary,
+          $color-text-dark-light
+        ); /* Gradient od żółtego do czarnego */
+        -webkit-background-clip: text; /* Działa w przeglądarkach WebKit (Chrome, Safari) */
+        background-clip: text; /* Ustawienie tła na tekst */
+        color: transparent; /* Tekst przezroczysty, gradient wypełnia litery */
       }
 
-      .title_name {
-        font-size: 5rem;
-        font-weight: $font-weight-extrabold;
-        text-transform: uppercase;
-        line-height: 1;
-        letter-spacing: 0.5rem;
-
-        .first_letter {
-          font-size: 130%;
-          letter-spacing: 0rem;
-        }
+      .title_bottom {
+        background: linear-gradient(
+          90deg,
+          $color-text-dark-light,
+          $color-text-primary
+        ); /* Gradient od czarnego do żółtego */
+        -webkit-background-clip: text; /* Działa w przeglądarkach WebKit (Chrome, Safari) */
+        background-clip: text; /* Ustawienie tła na tekst */
+        color: transparent; /* Tekst przezroczysty, gradient wypełnia litery */
       }
     }
 
     .subtitle {
-      font-size: 1.7rem;
+      font-size: 1.4rem;
       margin-top: 2rem;
-      line-height: 3rem;
+      line-height: 1.2;
       letter-spacing: 0.2rem;
+      color: $color-text-light-dark;
+      text-transform: uppercase;
     }
+  }
+}
 
-    .text_variable {
-      font-weight: $font-weight-bold;
-      line-height: 90px;
+@media (max-width: 1000px) {
+  .header {
+    .content {
+      .title {
+        font-size: 2.5rem;
+      }
+
+      .subtitle {
+        font-size: 1.2rem;
+      }
     }
   }
 }
 
 @media (max-width: 880px) {
   .header {
-    .video {
-      height: 700px;
-    }
+    background-image: url('/images/tlo-mobile.webp');
     .content {
       .title {
-        .title_part {
-          font-size: 0.8rem;
-        }
-
-        .title_name {
-          font-size: 3rem;
-        }
+        font-size: 2rem;
       }
 
       .subtitle {
-        font-size: 1.2rem;
-      }
-
-      .text_variable {
-        line-height: 60px;
+        font-size: 0.8rem;
       }
     }
   }
 }
 
-@media (max-width: 520px) {
+@media (max-width: 650px) {
+  .header {
+    .content {
+      width: auto;
+      .title {
+        font-size: 2rem;
+
+        .title_bottom {
+          display: block;
+          margin-top: 10px;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
   .header {
     .content {
       .title {
-        .title_name {
-          font-size: 2rem;
-        }
+        font-size: 1.6rem;
       }
 
       .subtitle {
-        font-size: 1rem;
-        line-height: 2rem;
+        font-size: 0.7rem;
       }
     }
   }
