--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -54,7 +54,9 @@
 }
 
 $color-text-dark: #141414;
+$color-text-dark-light: #1b1b1b;
 $color-text-light: #e7e7e7;
+$color-text-light-dark: #bbbaba;
 $color-text-danger: #ff0000;
 $color-text-success: #00ff00;
 $color-text-primary: #ffbf00;
