--- a/src/components/Prices/Prices.module.scss
+++ b/src/components/Prices/Prices.module.scss
@@ -58,6 +58,10 @@
           }
         }
 
+        .last_price {
+          margin-top: 80px;
+        }
+
         .list {
           margin-bottom: 20px;
 
