--- a/src/components/Headers/HeaderHome.module.scss
+++ b/src/components/Headers/HeaderHome.module.scss
@@ -18,7 +18,6 @@
     z-index: 1;
     display: flex;
     flex-direction: column;
-    width: max-content;
 
     .title {
       font-size: 3rem;
@@ -26,6 +25,7 @@
       text-transform: uppercase;
       line-height: 1.2;
       letter-spacing: 0.3rem;
+      text-wrap: nowrap;
 
       .title_top {
         background: linear-gradient(
@@ -95,26 +95,11 @@
     .content {
       width: auto;
       .title {
-        font-size: 2rem;
-
+        line-height: 0.8;
         .title_bottom {
           display: block;
           margin-top: 10px;
         }
-      }
-    }
-  }
-}
-
-@media (max-width: 400px) {
-  .header {
-    .content {
-      .title {
-        font-size: 1.6rem;
-      }
-
-      .subtitle {
-        font-size: 0.7rem;
       }
     }
   }
