--- a/src/components/MyServicesAccordion/MyServicesAccordion.css
+++ b/src/components/MyServicesAccordion/MyServicesAccordion.css
@@ -1,30 +1,30 @@
-.accordion .accordion-item {
+.myservice_accordion .accordion-item {
   background-color: #191d28;
   border: none;
   margin-bottom: 20px;
 }
 
-.accordion-item .accordion-header .accordion-button {
+.myservice_accordion .accordion-item .accordion-header .accordion-button {
   border-radius: 20px !important;
   font-size: 1.1rem;
   font-weight: 700;
   text-transform: uppercase;
 }
 
-.accordion-item .accordion-header .accordion-button:hover {
+.myservice_accordion .accordion-item .accordion-header .accordion-button:hover {
   color: #ffbf00;
 }
 
-.accordion-button:not(.collapsed):hover {
+.myservice_accordion .accordion-button:not(.collapsed):hover {
   color: #191d28 !important;
 }
 
-.accordion-button:not(.collapsed) {
+.myservice_accordion .accordion-button:not(.collapsed) {
   color: #191d28;
   background-color: #ffbf00;
   box-shadow: none;
 }
 
-.accordion-button:focus {
+.myservice_accordion .accordion-button:focus {
   box-shadow: none;
 }
