--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -6,23 +6,57 @@
   .wrapper {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 
     .portfolio_item {
-      flex: 1 1 0;
-      max-height: 500px;
-      overflow: hidden;
+      flex: calc(50% - 100px);
+      position: relative;
 
-      h2 {
-        text-align: left;
+      .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: $transition_0_3;
+        color: $color-text-light;
+        text-align: center;
+
+        h3 {
+          font-size: 2rem;
+          font-weight: $font-weight-extrabold;
+          margin-bottom: 1rem;
+        }
+
+        &:hover {
+          opacity: 1;
+        }
       }
     }
 
+    .title_box {
+      margin: 25px 25px;
+      text-align: center;
+    }
+
     .image_box {
-      margin: 0 10px;
+      margin: 25px 25px;
       border-radius: 20px;
       transition: $transition_0_3;
       border: solid 10px $color-background-dark;
+      overflow: hidden;
+
+      img {
+        object-fit: cover;
+        object-position: top;
+      }
 
       &:hover {
         transform: scale(1.05);
@@ -38,11 +72,6 @@
       flex-wrap: wrap;
       justify-content: space-evenly;
       row-gap: 30px;
-
-      .portfolio_item {
-        min-width: 300px;
-        max-width: 300px;
-      }
     }
   }
 }
@@ -52,24 +81,8 @@
     padding: 100px 0;
 
     .wrapper {
-      flex-direction: row;
+      flex-direction: column;
       align-items: center;
-      column-gap: 20px;
-      row-gap: 50px;
-
-      .portfolio_item {
-        min-width: 100%;
-
-        h2 {
-          text-align: center;
-        }
-      }
-
-      .image_box {
-        margin: 0;
-        min-width: 240px;
-        max-height: 400px;
-      }
     }
   }
 }
