--- a/src/components/SiteInfoServices/SiteInfoServices.module.scss
+++ b/src/components/SiteInfoServices/SiteInfoServices.module.scss
@@ -15,7 +15,7 @@
       border-radius: 20px 0 0 20px;
       display: flex;
       flex-direction: column;
-      justify-content: space-around;
+      justify-content: space-evenly;
       align-items: flex-start;
 
       h3 {
