--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,6 +24,10 @@ body {
   font-family: $font-body;
 }
 
+em {
+  font-style: normal;
+}
+
 .color_primary {
   color: $color-primary !important;
 }
@@ -47,7 +51,7 @@ body {
 
 @media (max-width: 768px) {
   html {
-    font-size: 16px;
+    font-size: 15px;
   }
 }
 
