--- a/src/components/RescentArticles/RescentArticles.module.scss
+++ b/src/components/RescentArticles/RescentArticles.module.scss
@@ -1,13 +1,16 @@
 @import '../../styles/settings.scss';
 
-.article_list {
+.RescentArticles {
   min-height: 700px;
+  padding: 100px 0;
+  background-color: $color-background-lighter;
 
   .wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     flex-direction: row;
+    margin-bottom: 50px;
   }
 }
 
