--- a/src/components/Testiniomals/Testiniomals.module.scss
+++ b/src/components/Testiniomals/Testiniomals.module.scss
@@ -6,7 +6,7 @@
   background-position: center;
   background-attachment: fixed;
   padding: 100px 0;
-  margin: 50px 0 100px;
+  margin: 50px 0 0;
 
   .title {
     display: flex;
