--- a/src/components/ProcessSteps/LogoProcessSteps.module.scss
+++ b/src/components/ProcessSteps/LogoProcessSteps.module.scss
@@ -240,6 +240,22 @@
           }
         }
 
+        .step_1,
+        .step_2,
+        .step_6 {
+          &::after {
+            bottom: -40px;
+          }
+        }
+
+        .step_3,
+        .step_4,
+        .step_5 {
+          &::after {
+            bottom: -25px;
+          }
+        }
+
         .step_number,
         .step_number_left,
         .step_number_last {
