--- a/src/components/SiteInfoServices/SiteInfoServices.module.scss
+++ b/src/components/SiteInfoServices/SiteInfoServices.module.scss
@@ -42,6 +42,18 @@
   }
 }
 
+.contact {
+  .wrapper {
+    .first_column {
+      border-radius: 20px;
+    }
+
+    .second_column {
+      display: none;
+    }
+  }
+}
+
 @media (max-width: 992px) {
   .site_info {
     .wrapper {
@@ -53,6 +65,14 @@
 
       .second_column {
         border-radius: 0 0 20px 20px;
+      }
+    }
+  }
+
+  .contact {
+    .wrapper {
+      .first_column {
+        border-radius: 20px;
       }
     }
   }
