--- a/src/components/Prices/Prices.module.scss
+++ b/src/components/Prices/Prices.module.scss
@@ -4,6 +4,7 @@
   background-color: $color-background-dark;
   color: $color-text-light;
   padding: 150px 0;
+  margin-bottom: 250px;
 
   .wrapper {
     display: flex;
