--- a/src/components/RescentArticles/RescentArticles.module.scss
+++ b/src/components/RescentArticles/RescentArticles.module.scss
@@ -1,8 +1,8 @@
 @import '../../styles/settings.scss';
 
-.RescentArticles {
+.rescent_articles {
   min-height: 700px;
-  padding: 100px 0;
+  padding: 300px 0 100px;
   background-color: $color-background-lighter;
 
   .wrapper {
