--- a/src/components/BlogArticles/BlogArticles.module.scss
+++ b/src/components/BlogArticles/BlogArticles.module.scss
@@ -8,6 +8,11 @@
     margin: 50px 0 30px;
   }
 
+  a {
+    color: $color-primary;
+    text-decoration: none;
+  }
+
   p {
     margin-bottom: 30px;
   }
@@ -27,6 +32,7 @@
 
     .image {
       flex: 1;
+      margin-left: 40px;
     }
   }
 }
@@ -42,6 +48,7 @@
 
       .image {
         margin-bottom: 40px;
+        margin-left: 0;
       }
     }
   }
