--- a/src/components/Headers/Headers.module.scss
+++ b/src/components/Headers/Headers.module.scss
@@ -4,7 +4,7 @@
   background-color: $color-background-dark;
   position: relative;
   height: 700px;
-  background-image: url('/images/tlo.webp');
+  background-image: image-set(url('/images/tlo.avif') type('image/avif'), url('/images/tlo.webp') type('image/webp'));
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -88,7 +88,12 @@
 
 @media (max-width: 880px) {
   .header {
-    background-image: url('/images/tlo-mobile.webp');
+    background-image: image-set(
+      url('/images/tlo-mobile.avif') type('image/avif'),
+      url('/images/tlo-mobile.webp') type('image/webp')
+    );
+
+    height: 600px;
     .content {
       .title {
         font-size: 2rem;
