--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -5,3 +5,25 @@
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
 }
+
+.menu_wrapper {
+  display: flex;
+  flex-direction: column;
+
+  .lang {
+    display: flex;
+    justify-content: flex-end !important;
+
+    & > a {
+      margin-left: 10px;
+      color: $color-text-light;
+      font-weight: $font-weight-bold;
+      font-size: 0.9rem;
+      text-decoration: none;
+    }
+
+    & > a.active {
+      color: $color-primary;
+    }
+  }
+}
