--- a/src/components/ScroolToPriceButton/ScroolToPriceButton.module.scss
+++ b/src/components/ScroolToPriceButton/ScroolToPriceButton.module.scss
@@ -38,3 +38,15 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .scroll_to_price_button {
+    bottom: 60px;
+    right: 10px;
+
+    svg {
+      width: 40px;
+      height: 40px;
+    }
+  }
+}
