--- a/src/components/ScroolUpButton/ScroolUpButton.module.scss
+++ b/src/components/ScroolUpButton/ScroolUpButton.module.scss
@@ -22,3 +22,15 @@
     }
   }
 }
+
+@media (max-width: 768px) {
+  .scroll_up_button {
+    bottom: 10px;
+    right: 10px;
+
+    svg {
+      width: 40px;
+      height: 40px;
+    }
+  }
+}
