przed aktualizacją zależności

--- a/src/components/SiteInfoServices/SiteInfoServices.module.scss
+++ b/src/components/SiteInfoServices/SiteInfoServices.module.scss
@@ -42,7 +42,7 @@
   }
 }
 
-.contact {
+.one_column {
   .wrapper {
     .first_column {
       border-radius: 20px;
@@ -69,7 +69,7 @@
     }
   }
 
-  .contact {
+  .one_column {
     .wrapper {
       .first_column {
         border-radius: 20px;
