--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -14,6 +14,11 @@
   text-transform: uppercase;
 }
 
+.navbar .container .navbar-nav a svg {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
 .navbar .container .navbar-nav a:hover {
   color: #f8b400;
 }
